@@ -20,7 +20,7 @@ Major housecleaning of X11's locale support.
 
 * Disable support for locales that are neither supported by the GNU C
   Library, nor use standard ISO 639 language or 3166 territory codes.  This
-  includes Esperanto (eo_EO, eo_XX), and what I presume is Pennsylvania
+  includes Esperanto (eo_EO), and what I presume is Pennsylvania
   "Dutch" (pd_DE, pd_US).
 
 * Turn off intrusion of Nynorsk into Nyanja's ISO 639 space.  (Nynorsk is
@@ -140,20 +140,15 @@ Index: libx11/nls/compose.dir.pre
  iso8859-1/Compose:		en_TT.ISO8859-1
  iso8859-1/Compose:		en_UK.ISO8859-1
  iso8859-15/Compose:		en_UK.ISO8859-15
-@@ -73,7 +98,11 @@
+@@ -73,6 +98,7 @@
  iso8859-15/Compose:		en_US.ISO8859-15
  iso8859-1/Compose:		en_ZA.ISO8859-1
  iso8859-15/Compose:		en_ZA.ISO8859-15
--iso8859-3/Compose:		eo_XX.ISO8859-3
 +iso8859-1/Compose:		en_ZW.ISO8859-1
-+XCOMM Esperato (eo) is not supported by the GNU C Library and neither the
-+XCOMM EO nor XX territories exist in ISO 3166.
-+XCOMM iso8859-3/Compose:	eo_EO.ISO8859-3
-+XCOMM iso8859-3/Compose:	eo_XX.ISO8859-3
+ iso8859-3/Compose:		eo_XX.ISO8859-3
  iso8859-1/Compose:		es_AR.ISO8859-1
  iso8859-1/Compose:		es_BO.ISO8859-1
- iso8859-1/Compose:		es_CL.ISO8859-1
-@@ -92,6 +121,7 @@
+@@ -92,6 +118,7 @@
  iso8859-1/Compose:		es_PR.ISO8859-1
  iso8859-1/Compose:		es_PY.ISO8859-1
  iso8859-1/Compose:		es_SV.ISO8859-1
@@ -161,7 +156,7 @@ Index: libx11/nls/compose.dir.pre
  iso8859-1/Compose:		es_UY.ISO8859-1
  iso8859-1/Compose:		es_VE.ISO8859-1
  iso8859-1/Compose:		et_EE.ISO8859-1
-@@ -100,6 +130,8 @@
+@@ -100,6 +127,8 @@
  iso8859-15/Compose:		et_EE.ISO8859-15
  iso8859-1/Compose:		eu_ES.ISO8859-1
  iso8859-15/Compose:		eu_ES.ISO8859-15
@@ -170,7 +165,7 @@ Index: libx11/nls/compose.dir.pre
  isiri-3342/Compose:		fa_IR.ISIRI-3342
  iso8859-1/Compose:		fi_FI.ISO8859-1
  iso8859-15/Compose:		fi_FI.ISO8859-15
-@@ -133,11 +165,9 @@
+@@ -133,11 +162,9 @@
  iso8859-2/Compose:		hu_HU.ISO8859-2
  armscii-8/Compose:		hy_AM.ARMSCII-8
  iso8859-1/Compose:		id_ID.ISO8859-1
@@ -182,7 +177,7 @@ Index: libx11/nls/compose.dir.pre
  iso8859-1/Compose:		it_IT.ISO8859-1
  iso8859-15/Compose:		it_IT.ISO8859-15
  ja/Compose:			ja_JP.eucJP
-@@ -146,14 +176,20 @@
+@@ -146,14 +173,20 @@
  georgian-academy/Compose:	ka_GE.GEORGIAN-ACADEMY
  georgian-ps/Compose:		ka_GE.GEORGIAN-PS
  iso8859-1/Compose:		kl_GL.ISO8859-1
@@ -205,7 +200,7 @@ Index: libx11/nls/compose.dir.pre
  iso8859-4/Compose:		lt_LT.ISO8859-4
  iso8859-13/Compose:		lt_LT.ISO8859-13
  iso8859-4/Compose:		lv_LV.ISO8859-4
-@@ -180,25 +216,33 @@
+@@ -180,25 +213,33 @@
  iso8859-15/Compose:		ny_NO.ISO8859-15
  iso8859-1/Compose:		oc_FR.ISO8859-1
  iso8859-15/Compose:		oc_FR.ISO8859-15
@@ -243,7 +238,7 @@ Index: libx11/nls/compose.dir.pre
  iso8859-2/Compose:		sq_AL.ISO8859-2
  iso8859-2/Compose:		sr_CS.ISO8859-2
  iso8859-5/Compose:		sr_CS.ISO8859-5
-@@ -212,38 +256,57 @@
+@@ -212,38 +253,57 @@
  iso8859-15/Compose:		sv_SE.ISO8859-15
  tscii-0/Compose:		ta_IN.TSCII-0
  koi8-c/Compose:			tg_TJ.KOI8-C
@@ -307,7 +302,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		ar_IQ.UTF-8
  en_US.UTF-8/Compose:		ar_JO.UTF-8
  en_US.UTF-8/Compose:		ar_KW.UTF-8
-@@ -253,15 +316,18 @@
+@@ -253,15 +313,18 @@
  en_US.UTF-8/Compose:		ar_OM.UTF-8
  en_US.UTF-8/Compose:		ar_QA.UTF-8
  en_US.UTF-8/Compose:		ar_SA.UTF-8
@@ -327,7 +322,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		ca_AD.UTF-8
  en_US.UTF-8/Compose:		ca_ES.UTF-8
  en_US.UTF-8/Compose:		ca_FR.UTF-8
-@@ -279,18 +345,29 @@
+@@ -279,17 +342,25 @@
  el_GR.UTF-8/Compose:		el_CY.UTF-8
  el_GR.UTF-8/Compose:		el_GR.UTF-8
  en_US.UTF-8/Compose:		en_AU.UTF-8
@@ -349,16 +344,11 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		en_UK.UTF-8
  en_US.UTF-8/Compose:		en_US.UTF-8
  en_US.UTF-8/Compose:		en_ZA.UTF-8
--en_US.UTF-8/Compose:		eo_XX.UTF-8
 +en_US.UTF-8/Compose:		en_ZW.UTF-8
-+XCOMM Esperato (eo) is not supported by the GNU C Library and neither the
-+XCOMM EO nor XX territories exist in ISO 3166.
-+XCOMM en_US.UTF-8/Compose:	eo_EO.UTF-8
-+XCOMM en_US.UTF-8/Compose:	eo_XX.UTF-8
+ en_US.UTF-8/Compose:		eo_XX.UTF-8
  en_US.UTF-8/Compose:		es_AR.UTF-8
  en_US.UTF-8/Compose:		es_BO.UTF-8
- en_US.UTF-8/Compose:		es_CL.UTF-8
-@@ -313,6 +390,7 @@
+@@ -313,6 +384,7 @@
  en_US.UTF-8/Compose:		es_VE.UTF-8
  en_US.UTF-8/Compose:		et_EE.UTF-8
  en_US.UTF-8/Compose:		eu_ES.UTF-8
@@ -366,7 +356,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		fa_IR.UTF-8
  fi_FI.UTF-8/Compose:		fi_FI.UTF-8
  en_US.UTF-8/Compose:		fo_FO.UTF-8
-@@ -323,6 +401,8 @@
+@@ -323,6 +395,8 @@
  en_US.UTF-8/Compose:		fr_LU.UTF-8
  en_US.UTF-8/Compose:		ga_IE.UTF-8
  en_US.UTF-8/Compose:		gd_GB.UTF-8
@@ -375,7 +365,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		gl_ES.UTF-8
  en_US.UTF-8/Compose:		gu_IN.UTF-8
  en_US.UTF-8/Compose:		gv_GB.UTF-8
-@@ -336,10 +416,13 @@
+@@ -336,10 +410,13 @@
  en_US.UTF-8/Compose:		it_CH.UTF-8
  en_US.UTF-8/Compose:		it_IT.UTF-8
  en_US.UTF-8/Compose:		iu_CA.UTF-8
@@ -389,7 +379,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		ko_KR.UTF-8
  en_US.UTF-8/Compose:		kw_GB.UTF-8
  en_US.UTF-8/Compose:		ky_KG.UTF-8
-@@ -348,8 +431,12 @@
+@@ -348,8 +425,12 @@
  en_US.UTF-8/Compose:		lv_LV.UTF-8
  en_US.UTF-8/Compose:		mi_NZ.UTF-8
  en_US.UTF-8/Compose:		mk_MK.UTF-8
@@ -402,7 +392,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		nl_BE.UTF-8
  en_US.UTF-8/Compose:		nl_NL.UTF-8
  en_US.UTF-8/Compose:		nn_NO.UTF-8
-@@ -357,11 +444,17 @@
+@@ -357,11 +438,17 @@
  en_US.UTF-8/Compose:		nb_NO.UTF-8
  en_US.UTF-8/Compose:		nr_ZA.UTF-8
  en_US.UTF-8/Compose:		nso_ZA.UTF-8
@@ -423,7 +413,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		ph_PH.UTF-8
  en_US.UTF-8/Compose:		pl_PL.UTF-8
  en_US.UTF-8/Compose:		pp_AN.UTF-8
-@@ -371,10 +464,14 @@
+@@ -371,10 +458,14 @@
  en_US.UTF-8/Compose:		ru_RU.UTF-8
  en_US.UTF-8/Compose:		ru_UA.UTF-8
  en_US.UTF-8/Compose:		rw_RW.UTF-8
@@ -438,7 +428,7 @@ Index: libx11/nls/compose.dir.pre
  en_US.UTF-8/Compose:		sq_AL.UTF-8
  en_US.UTF-8/Compose:		sr_CS.UTF-8
  en_US.UTF-8/Compose:		sr_ME.UTF-8
-@@ -385,8 +482,12 @@
+@@ -385,8 +476,12 @@
  en_US.UTF-8/Compose:		sv_FI.UTF-8
  en_US.UTF-8/Compose:		sv_SE.UTF-8
  en_US.UTF-8/Compose:		ta_IN.UTF-8
@@ -603,21 +593,18 @@ Index: libx11/nls/locale.dir.pre
  iso8859-15/XLC_LOCALE:			en_IN.ISO8859-15
  iso8859-1/XLC_LOCALE:			en_JM.ISO8859-1
  iso8859-1/XLC_LOCALE:			en_NZ.ISO8859-1
-@@ -88,8 +98,11 @@
+@@ -88,7 +98,9 @@
  iso8859-15/XLC_LOCALE:			en_US.ISO8859-15
  iso8859-1/XLC_LOCALE:			en_ZA.ISO8859-1
  iso8859-15/XLC_LOCALE:			en_ZA.ISO8859-15
 -iso8859-3/XLC_LOCALE:			eo_EO.ISO8859-3
--iso8859-3/XLC_LOCALE:			eo_XX.ISO8859-3
 +iso8859-1/XLC_LOCALE:			en_ZW.ISO8859-1
-+XCOMM Esperato (eo) is not supported by the GNU C Library and neither the
-+XCOMM EO nor XX territories exist in ISO 3166.
++XCOMM The EO territory doesn't exist in ISO 3166.
 +XCOMM iso8859-3/XLC_LOCALE:			eo_EO.ISO8859-3
-+XCOMM iso8859-3/XLC_LOCALE:			eo_XX.ISO8859-3
+ iso8859-3/XLC_LOCALE:			eo_XX.ISO8859-3
  iso8859-1/XLC_LOCALE:			es_AR.ISO8859-1
  iso8859-1/XLC_LOCALE:			es_BO.ISO8859-1
- iso8859-1/XLC_LOCALE:			es_CL.ISO8859-1
-@@ -117,6 +130,8 @@
+@@ -117,6 +129,8 @@
  iso8859-15/XLC_LOCALE:			et_EE.ISO8859-15
  iso8859-1/XLC_LOCALE:			eu_ES.ISO8859-1
  iso8859-15/XLC_LOCALE:			eu_ES.ISO8859-15
@@ -626,7 +613,7 @@ Index: libx11/nls/locale.dir.pre
  isiri-3342/XLC_LOCALE:			fa_IR.ISIRI-3342
  iso8859-1/XLC_LOCALE:			fi_FI.ISO8859-1
  iso8859-15/XLC_LOCALE:			fi_FI.ISO8859-15
-@@ -165,6 +180,7 @@
+@@ -165,6 +179,7 @@
  iso8859-1/XLC_LOCALE:			kw_GB.ISO8859-1
  iso8859-14/XLC_LOCALE:			kw_GB.ISO8859-14
  iso8859-15/XLC_LOCALE:			kw_GB.ISO8859-15
@@ -634,7 +621,7 @@ Index: libx11/nls/locale.dir.pre
  ibm-cp1133/XLC_LOCALE:			lo_LA.IBM-CP1133
  mulelao-1/XLC_LOCALE:			lo_LA.MULELAO-1
  iso8859-4/XLC_LOCALE:			lt_LT.ISO8859-4
-@@ -192,8 +208,12 @@
+@@ -192,8 +207,12 @@
  iso8859-1/XLC_LOCALE:			ny_NO.ISO8859-15
  iso8859-1/XLC_LOCALE:			oc_FR.ISO8859-1
  iso8859-15/XLC_LOCALE:			oc_FR.ISO8859-15
@@ -649,7 +636,7 @@ Index: libx11/nls/locale.dir.pre
  iso8859-2/XLC_LOCALE:			pl_PL.ISO8859-2
  iso8859-1/XLC_LOCALE:			pp_AN.ISO8859-1
  iso8859-1/XLC_LOCALE:			pt_BR.ISO8859-1
-@@ -203,11 +223,15 @@
+@@ -203,11 +222,15 @@
  iso8859-5/XLC_LOCALE: 			ru_RU.ISO8859-5
  microsoft-cp1251/XLC_LOCALE: 		ru_RU.CP1251
  koi8-r/XLC_LOCALE: 			ru_RU.KOI8-R
@@ -665,7 +652,7 @@ Index: libx11/nls/locale.dir.pre
  iso8859-2/XLC_LOCALE: 			sq_AL.ISO8859-2
  iso8859-2/XLC_LOCALE:			sr_CS.ISO8859-2
  iso8859-5/XLC_LOCALE:			sr_CS.ISO8859-5
-@@ -222,8 +246,8 @@
+@@ -222,8 +245,8 @@
  iso8859-15/XLC_LOCALE:			sv_SE.ISO8859-15
  tscii-0/XLC_LOCALE:			ta_IN.TSCII-0
  koi8-c/XLC_LOCALE:			tg_TJ.KOI8-C
@@ -675,7 +662,7 @@ Index: libx11/nls/locale.dir.pre
  iso8859-1/XLC_LOCALE: 			tl_PH.ISO8859-1
  iso8859-15/XLC_LOCALE:			tn_ZA.ISO8859-15
  iso8859-9/XLC_LOCALE:			tr_TR.ISO8859-9
-@@ -234,6 +258,7 @@
+@@ -234,6 +257,7 @@
  microsoft-cp1251/XLC_LOCALE: 		uk_UA.CP1251
  koi8-u/XLC_LOCALE:			uk_UA.KOI8-U
  microsoft-cp1256/XLC_LOCALE:		ur_PK.CP1256
@@ -683,7 +670,7 @@ Index: libx11/nls/locale.dir.pre
  vi_VN.tcvn/XLC_LOCALE:			vi_VN.TCVN
  vi_VN.viscii/XLC_LOCALE:		vi_VN.VISCII
  iso8859-1/XLC_LOCALE:			wa_BE.ISO8859-1
-@@ -249,10 +274,17 @@
+@@ -249,10 +273,17 @@
  zh_HK.big5hkscs/XLC_LOCALE:		zh_HK.Big5-HKSCS
  zh_HK.big5hkscs/XLC_LOCALE:		zh_HK.big5hkscs
  zh_HK.big5hkscs/XLC_LOCALE:		zh_HK.Big5HKSCS
@@ -701,7 +688,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			af_ZA.UTF-8
  en_US.UTF-8/XLC_LOCALE:			am_ET.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ar_AA.UTF-8
-@@ -260,6 +292,7 @@
+@@ -260,6 +291,7 @@
  en_US.UTF-8/XLC_LOCALE:			ar_BH.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ar_DZ.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ar_EG.UTF-8
@@ -709,7 +696,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			ar_IQ.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ar_JO.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ar_KW.UTF-8
-@@ -276,12 +309,12 @@
+@@ -276,12 +308,12 @@
  en_US.UTF-8/XLC_LOCALE:			ar_YE.UTF-8
  en_US.UTF-8/XLC_LOCALE:			as_IN.UTF-8
  en_US.UTF-8/XLC_LOCALE:			az_AZ.UTF-8
@@ -723,7 +710,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			ca_AD.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ca_ES.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ca_FR.UTF-8
-@@ -300,19 +333,28 @@
+@@ -300,18 +332,26 @@
  en_US.UTF-8/XLC_LOCALE:			el_GR.UTF-8
  en_US.UTF-8/XLC_LOCALE:			en_AU.UTF-8
  en_US.UTF-8/XLC_LOCALE:			en_BE.UTF-8
@@ -745,16 +732,13 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			en_US.UTF-8
  en_US.UTF-8/XLC_LOCALE:			en_ZA.UTF-8
 -en_US.UTF-8/XLC_LOCALE:			eo_EO.UTF-8
--en_US.UTF-8/XLC_LOCALE:			eo_XX.UTF-8
 +en_US.UTF-8/XLC_LOCALE:			en_ZW.UTF-8
-+XCOMM Esperato (eo) is not supported by the GNU C Library and neither the
-+XCOMM EO nor XX territories exist in ISO 3166.
++XCOMM The EO territory doesn't exist in ISO 3166.
 +XCOMM en_US.UTF-8/XLC_LOCALE:			eo_EO.UTF-8
-+XCOMM en_US.UTF-8/XLC_LOCALE:			eo_XX.UTF-8
+ en_US.UTF-8/XLC_LOCALE:			eo_XX.UTF-8
  en_US.UTF-8/XLC_LOCALE:			es_AR.UTF-8
  en_US.UTF-8/XLC_LOCALE:			es_BO.UTF-8
- en_US.UTF-8/XLC_LOCALE:			es_CL.UTF-8
-@@ -335,6 +377,7 @@
+@@ -335,6 +375,7 @@
  en_US.UTF-8/XLC_LOCALE:			es_VE.UTF-8
  en_US.UTF-8/XLC_LOCALE:			et_EE.UTF-8
  en_US.UTF-8/XLC_LOCALE:			eu_ES.UTF-8
@@ -762,7 +746,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			fa_IR.UTF-8
  fi_FI.UTF-8/XLC_LOCALE:			fi_FI.UTF-8
  en_US.UTF-8/XLC_LOCALE:			fo_FO.UTF-8
-@@ -345,6 +388,8 @@
+@@ -345,6 +386,8 @@
  en_US.UTF-8/XLC_LOCALE:			fr_LU.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ga_IE.UTF-8
  en_US.UTF-8/XLC_LOCALE:			gd_GB.UTF-8
@@ -771,7 +755,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			gl_ES.UTF-8
  en_US.UTF-8/XLC_LOCALE:			gu_IN.UTF-8
  en_US.UTF-8/XLC_LOCALE:			gv_GB.UTF-8
-@@ -358,10 +403,12 @@
+@@ -358,10 +401,12 @@
  en_US.UTF-8/XLC_LOCALE:			it_CH.UTF-8
  en_US.UTF-8/XLC_LOCALE:			it_IT.UTF-8
  en_US.UTF-8/XLC_LOCALE:			iu_CA.UTF-8
@@ -784,7 +768,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			kn_IN.UTF-8
  ko_KR.UTF-8/XLC_LOCALE:			ko_KR.UTF-8
  en_US.UTF-8/XLC_LOCALE:			kw_GB.UTF-8
-@@ -372,22 +419,30 @@
+@@ -372,22 +417,30 @@
  en_US.UTF-8/XLC_LOCALE:			mi_NZ.UTF-8
  en_US.UTF-8/XLC_LOCALE:			mk_MK.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ml_IN.UTF-8
@@ -818,7 +802,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			ph_PH.UTF-8
  en_US.UTF-8/XLC_LOCALE:			pl_PL.UTF-8
  en_US.UTF-8/XLC_LOCALE:			pp_AN.UTF-8
-@@ -398,11 +453,13 @@
+@@ -398,11 +451,13 @@
  en_US.UTF-8/XLC_LOCALE:			ru_UA.UTF-8
  en_US.UTF-8/XLC_LOCALE:         rw_RW.UTF-8
  en_US.UTF-8/XLC_LOCALE:			se_NO.UTF-8
@@ -832,7 +816,7 @@ Index: libx11/nls/locale.dir.pre
  en_US.UTF-8/XLC_LOCALE:			sq_AL.UTF-8
  en_US.UTF-8/XLC_LOCALE:			sr_CS.UTF-8
  en_US.UTF-8/XLC_LOCALE:			sr_ME.UTF-8
-@@ -418,6 +475,7 @@
+@@ -418,6 +473,7 @@
  th_TH.UTF-8/XLC_LOCALE:			th_TH.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ti_ER.UTF-8
  en_US.UTF-8/XLC_LOCALE:			ti_ET.UTF-8
